# chinese-text-analyzer

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html
assets/: index.0d043f10.css  index.1a941ff6.js  index.200a1453.js  index.24b98fd5.css  index.2acb122a.css  index.4443a1e7.css  index.44cea7e2.js  index.49e9f698.css  index.4d939fbd.js  index.5ce160ac.js  index.5d9904b9.js  index.60b9f023.js  index.6e76d877.js  index.7e8b7c68.js  index.85dec9bf.js  index.8aa2ee37.js  index.8f5591e0.js  index.b681e8ff.js  index.c4b07539.js  index.c677b515.js  index.d276b730.js  index.d8eef9b5.js  index.f6a82bb8.js
baidu-lac-rs/: Cargo.toml
baidu-lac-rs/src/: lib.rs
chinese-text-analyzer-frontend/: package-lock.json  package.json
chinese-text-analyzer-frontend/src/: App.tsx
chinese-text-analyzer-frontend/src/components/text-analyzer/: TextAnalyzer.tsx
crates/analyzer/: Cargo.toml
crates/analyzer-wasm/: Cargo.toml  package-lock.json
crates/analyzer-wasm/src/: lib.rs  utils.rs
crates/analyzer/src/: analyzer.rs  lib.rs  utils.rs
crates/baidu-lac-rs/: Cargo.toml  README.md
crates/baidu-lac-rs/src/: dict_utils.rs  lib.rs  output_item.rs
crates/leptos-ui/: Cargo.toml  Trunk.toml  index.html
crates/leptos-ui/src/: lib.rs  main.rs
crates/leptos-ui/src/components/: mod.rs
crates/leptos-ui/src/pages/: mod.rs
crates/leptos-ui/src/pages/main_page/: mod.rs
crates/paddle-inference-api-sys/: Cargo.toml  build.rs  paddle_wrapper.h
crates/paddle-inference-api-sys/src/: lib.rs
crates/paddle-inference-rust-api/: .gitignore  Cargo.toml  README.md
crates/paddle-inference-rust-api/examples/: basic.rs
crates/paddle-inference-rust-api/src/: config.rs  copy_pd_input.rs  copy_pd_output.rs  lib.rs  predictor.rs  tensor.rs  version.rs
src/: main.rs  output_item.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/models/lac_model/model/: __model__  crfw  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  fc_4.b_0  fc_4.w_0  gru_0.b_0  gru_0.w_0  gru_1.b_0  gru_1.w_0  gru_2.b_0  gru_2.w_0  gru_3.b_0  gru_3.w_0
src-tauri/src/: analyzer.rs  main.rs  utils.rs
web-app/: index.html  package-lock.json  package.json  vite.config.ghpages.ts
web-app/src/: analyzer-worker-provider.tsx  analyzer-worker.js  app.css  app.tsx  main.tsx  wasm-webworker.js
web-app/src/common/: analyzer-output.ts  drag-and-drop.css  drag-and-drop.tsx
web-app/src/components/drag-and-drop/: drag-and-drop.tsx  file-drag-and-drop-container.tsx
web-app/src/components/text-analyzer/: file-analyzer.tsx  file-drop-overlay.tsx  settings.tsx  text-analyzer-hoc.tsx  text-analyzer-output.tsx  text-analyzer.tsx
web-app/src/interface/: hsk-table-data.ts  text-analyzer-settings.ts
web-app/src/models/: analyzer-output.ts  hsk-table-data.ts
web-app/src/pages/text-analyzer/: text-analyzer-wasm.page.tsx  text-analyzer.page.tsx
web-app/src/pages/text-analyzer/components/: file-drop-overlay.tsx  select-file.tsx  settings.tsx  text-analyzer.tsx  view-github-btn.tsx
web-app/src/pages/text-analyzer/components/drag-and-drop/: drag-and-drop.css
web-app/src/pages/text-analyzer/components/text-analyzer-output/: details-modal.tsx  hsk-breakdown-table.tsx  text-analyzer-output.css  text-analyzer-output.tsx
web-app/src/utils/: save-canvas.ts  show-error.ts  watermark.ts
