[package]
name = "chinese-text-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Malkov <dmitry.malkov@live.com>"]
license = "MIT OR Apache-2.0"
keywords = ["text-analyzer", "chinese", "nlp"]
categories = ["text-processing"]
description = "Simple Chinese text analyzer"

# [build]
# rustflags = ["-C", "link-args=-Wl,-rpath,/Users/dmalkov/Documents/biba-ltd/rust/paddle-wrapper/paddle_c_2.3/paddle/lib"]
# rustflags = ["-C", "link-args=-Wl,-rpath,@executable_path/../lib"]

[workspace]
members = [
    "crates/paddle-inference-api-sys",
    "crates/paddle-inference-rust-api",
    "crates/baidu-lac-rs",
    "src-tauri",
]

[dependencies]
baidu-lac-rs = { path = "./crates/baidu-lac-rs" }
