[package]
name = "chinese-text-analyzer"
version = "1.2.1"
edition = "2021"
authors = ["Dmitry Malkov <dmitry.malkov@live.com>"]
license = "MIT OR Apache-2.0"
keywords = ["text-analyzer", "chinese", "nlp"]
categories = ["text-processing"]
description = "Simple Chinese text analyzer"

[workspace]
members = [
    "crates/analyzer",
    "crates/analyzer-wasm",
    "src-tauri",
]

[dependencies]
analyzer = { path = "./crates/analyzer" }
