[package]
name = "chinese-text-analyzer-tauri"
version = "0.1.0"
description = "Chinese Text Analyzer"
authors = ["Dmitry Malkov <dmitry.malkov@live.com>"]
license = ""
repository = ""
default-run = "chinese-text-analyzer-tauri"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
jieba-rs = "0.6"
unicode-normalization = "0.1.19"
unicode-general-category = "0.5.1"
regex = "1"
lazy_static = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
