[package]
name = "analyzer-wasm"
version = "1.3.0"
authors = ["Dmitry Malkov <targtn@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

analyzer = { path = "../analyzer" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
