[package]
name = "analyzer"
version = "1.5.2"
authors = ["Dmitry Malkov <targtn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = "0.6"
hsk = "0.1.0"
unicode-normalization = "0.1.19"
unicode-general-category = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
