[package]
name = "baidu-lac-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Malkov <dmitry.malkov@live.com>"]
license = "MIT OR Apache-2.0"
keywords = ["text-analyzer", "chinese", "nlp"]
categories = ["text-processing"]
description = "Rust version of Baidu's LAC (Lexical Analysis of Chinese)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paddle-inference-rust-api = { path = "../paddle-inference-rust-api" }