[package]
name = "leptos-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.2.5", features = ["csr"] }
leptos_router = { version = "0.2.5", features = ["csr"] }
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-timers = "0.2.6"
chrono = { version = "0.4.23", features = ["serde"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

