[package]
name = "paddle-inference-api-sys"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Malkov <dmitry.malkov@live.com>"]
license = "Apache-2.0"
keywords = ["paddlepaddle", "machine-learning", "ai"]
categories = ["external-ffi-bindings"]
description = "Raw FFI bindings for Paddle Inference API"
links = "paddle_inference_c"

[build-dependencies]
bindgen = "0.59.2"